# iceMPM_3D

./: CMakeLists.txt  CMakeLists.txt.autosave  README.md  icons.qrc  p1.json  p1_generate.json  p2.json  p3.json  p3b.json  p4.json
cli/: cli_convert.cpp  cli_generate.cpp  cli_simulate.cpp  main.cpp
gui/: backgroundworker.cpp  backgroundworker.h  parameters_wrapper.h
gui/vtk/: vtk_representation.cpp  vtk_representation.h
gui/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
initial_setups/: cone2m.json  cone3.json  p1.json  p2.json  p4.json
paraview/: paraview_preset.json
simulation/: constitutive_model.cu  gpu_implementation4.cu  gpu_implementation4.h  helper_math.cuh  model_3d.cpp  model_3d.h  parameters_sim_3d.cpp  parameters_sim_3d.h  point_3d.cpp  point_3d.h  snapshotmanager.cpp  snapshotmanager.h
